--- a/backend/package.json
+++ b/backend/package.json
@@ -2,5 +2,9 @@
   "dependencies": {
     "express": "^4.18.2",
     "mongoose": "^7.6.2"
+  },
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   }
 }
